--- a/index.html
+++ b/index.html
@@ -125,18 +125,17 @@
                 </div>
                 <div class="con">
                     <div class="text-comte">
-                        Video Template<br>
-                        "Story & Reels & Post Şablonları"
+                        Göz Alıcı Reels Şablonlar ile e<br>
+                        "Sosyal Medyada İşinizi Büyütün!"
                     </div>
                     <div class="text-comte">
                         <div class="detail">
                             Şablonu seç, farkını yansıt
                         </div>
                         <ul>
-                            <li>*Ücretsiz değişiklikler</li>
-                            <li>*Logo & Yazı Ekleme</li>
-                            <li>*Yazı & Renk Değiştirme</li>
-                            <li>*Ücretsiz değişiklikler</li>
+                            <li>*Profesyonel Tasarımlar</li>
+                            <li>*Zamandan Tasarruf</li>
+                            <li>*Düşük Maliyet</li>                           
                         </ul>
                         <div class="detail">
                             Detaylı bilgi için mesaj gönderebilirsiniz
