--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <div class="alt-footv2">
             <div style="color: crimson;" class="head-text">
-                Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!
+                Kendi markanıza özel tamamen özelleştrilebilir reels şablonlar!
             </div>
             <div class="cont">
                 <div class="con">
