--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="sol">
                 <div class="banner">
                     <h1>
-                        Sosyal Medya Avantajdır! Hareketli tasarımlar ile farkedilen olun! Akılda kalıcı olun !
+                        Yüksek Kaliteli videolar oluşturmak için tek yapmanız gereken bizimle iletişime geçmek !
                     </h1>
                     <h2>
                         Profesyonel şablonları kullanarak
@@ -112,7 +112,7 @@
 
         <div class="alt-footv2">
             <div style="color: crimson;" class="head-text">
-                Kendi markanıza özel tamamen özelleştrilebilir reels şablonlar!
+                Kendi markanıza özel tamamen özelleştirilebilir reels şablonlar!
             </div>
             <div class="cont">
                 <div class="con">
@@ -125,7 +125,7 @@
                 </div>
                 <div class="con">
                     <div class="text-comte">
-                        Göz Alıcı Reels Şablonlar ile e<br>
+                        Göz Alıcı Reels Şablonlar ile <br>
                         "Sosyal Medyada İşinizi Büyütün!"
                     </div>
                     <div class="text-comte">
