--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="cont">
                 <div class="con">
                     <div class="img-secrv2">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pFTfC32jOEY" title="Sosyal Medya Avantajdır!"
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0MSJF2ywW0s" title="Sosyal Medya Avantajdır!"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="text-comte">
                         <div class="detail">
-                            Şablonu seç, farkını yansıt
+                           Aralarından seçeceğiniz birçok şablon sayesinde
                         </div>
                         <ul>
                             <li>*Profesyonel Tasarımlar</li>
