--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
     
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/FaIkpv6ws6g"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hyvsWBIUOhc"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -190,7 +190,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
     
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UhcCN1h0Qw8" title="" frameborder="0"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UoQnnGmh9j8" title="" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
             <div class="alt">
