--- a/index.html
+++ b/index.html
@@ -164,7 +164,14 @@
         </div>
          
 
-
+</div>
+            <div class="cont">
+                <div class="con">
+                    <div class="img-secrv2">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0MSJF2ywW0s" title="Sosyal Medya Avantajdır!"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
 
 
 <div class="container">
@@ -173,7 +180,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
     
         <div class="video-frame">
-            <iframe width="60%" height="20%" src="https://www.youtube.com/embed/hyvsWBIUOhc"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hyvsWBIUOhc"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
