--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
     
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pcVv56mF2nI"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/7taQmJs5grM"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
