--- a/index.html
+++ b/index.html
@@ -383,7 +383,10 @@
         
                 <div class="alt-foot">
                     <div class="head-text">
-                        Hareketli tasarımlar, sosyal medyada ürün ve kampanyalarınızı tanıtmak, web sitenize trafik çekmek için etkili bir yoldur.
+                          Her zamankinden daha hızlı ve etkili reels paylaşmak için doğru yerdesiniz .
+                          Aralarından seçim yapabileceğiniz şablonları size ait yapmak için renkleri değiştirebilir,
+                          kendi metninizi ekleyebilir ve istediğiniz resim/ürünleri değiştirebiliriz.
+                          **Şablonları Instagram Reels ve Youtube sayfamızda inceleyebilirsiniz ..
                     </div>
                         <div class="cont">
                             <div class="cont1">
