--- a/index.html
+++ b/index.html
@@ -384,9 +384,7 @@
                 <div class="alt-foot">
                     <div class="head-text">
                           Her zamankinden daha hızlı ve etkili reels paylaşmak için doğru yerdesiniz .
-                          Aralarından seçim yapabileceğiniz şablonları size ait yapmak için renkleri değiştirebilir,
-                          kendi metninizi ekleyebilir ve istediğiniz resim/ürünleri değiştirebiliriz.
-                          **Şablonları Instagram Reels ve Youtube sayfamızda inceleyebilirsiniz ..
+                          Şablonları Instagram Reels ve Youtube sayfamızda inceleyebilirsiniz ..
                     </div>
                         <div class="cont">
                             <div class="cont1">
