--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 <div class="alt-foot">
                     <div class="head-text">
                           Her zamankinden daha hızlı ve etkili reels paylaşmak için doğru yerdesiniz .
-                          Şablonları Instagram Reels ve Youtube sayfamızda inceleyebilirsiniz ..
+                          <span>Şablonları Instagram Reels ve Youtube sayfamızda inceleyebilirsiniz</span>
                     </div>
                         <div class="cont">
                             <div class="cont1">
