--- a/index.html
+++ b/index.html
@@ -383,7 +383,12 @@
         
                 <div class="alt-foot">
                     <div class="head-text">
-                          Her zamankinden daha hızlı ve etkili reels paylaşmak için doğru yerdesiniz .
+                          </h1>
+                    <h2>
+                        Profesyonel şablonları kullanarak
+                        işletmeniz için animasyonlu videolar paylaşın!
+                        <div class="buttons">
+                            Her zamankinden daha hızlı ve etkili reels paylaşmak için doğru yerdesiniz .
                           <span>Şablonları Instagram Reels ve Youtube sayfamızda inceleyebilirsiniz</span>
                     </div>
                         <div class="cont">
