--- a/index.html
+++ b/index.html
@@ -385,11 +385,12 @@
                     Her zamankinden daha hızlı ve etkili reels paylaşmak için doğru yerdesiniz .
                     <span>Şablonları Instagram Reels ve Youtube sayfamızda inceleyebilirsiniz</span>
                     <div class="head-text">
-                          </h1>
+                          <h1>
+                        Yüksek Kaliteli videolar oluşturmak için tek yapmanız gereken bizimle iletişime geçmek !
+                    </h1>
                     <h2>
                         Profesyonel şablonları kullanarak
                         işletmeniz için animasyonlu videolar paylaşın!
-                        <div class="buttons">
                     </div>
                         <div class="cont">
                             <div class="cont1">
