--- a/index.html
+++ b/index.html
@@ -386,11 +386,10 @@
                     <span>Şablonları Instagram Reels ve Youtube sayfamızda inceleyebilirsiniz</span>
                     <div class="head-text">
                           <h1>
-                        Yüksek Kaliteli videolar oluşturmak için tek yapmanız gereken bizimle iletişime geçmek !
+                        Şablonları Instagram Reels ve Youtube sayfamızda inceleyebilirsiniz
                     </h1>
                     <h2>
-                        Profesyonel şablonları kullanarak
-                        işletmeniz için animasyonlu videolar paylaşın!
+                        Kitlenizi büyütmek için profesyonel reels videolar oluşturmaya hazırız! Ya Siz ?
                     </div>
                         <div class="cont">
                             <div class="cont1">
