--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         
                 <div class="alt-foot">
                     Her zamankinden daha hızlı ve etkili reels paylaşmak için doğru yerdesiniz .
-                    <span>Şablonları Instagram Reels ve Youtube sayfamızda inceleyebilirsiniz</span>
+                    <span></span>
                     <div class="head-text">
                           <h1>
                         Şablonları Instagram Reels ve Youtube sayfamızda inceleyebilirsiniz
