--- a/index.html
+++ b/index.html
@@ -384,9 +384,8 @@
                 <div class="alt-foot">
                           <h1>
                          Her zamankinden daha hızlı ve etkili reels paylaşmak için doğru yerdesiniz .
-                    <span></span>
-                    <div class="head-text">
-                          <h1>
+                    <span>
+                        <h1>
                         Şablonları Instagram Reels ve Youtube sayfamızda inceleyebilirsiniz
                     </h1>
                     <h2>
