--- a/indirim-kampanya.html
+++ b/indirim-kampanya.html
@@ -121,7 +121,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/FaIkpv6ws6g"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/j9MO_ME95EE"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -138,7 +138,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UhcCN1h0Qw8" title="" frameborder="0"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/GgfN9PHhi0g" title="" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
             <div class="alt">
@@ -152,7 +152,7 @@
 
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/YYqHlQGogdE"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/zW0aCy-bius"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -169,7 +169,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pClQSWsuj1U"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Z8YIylj45xg"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -185,7 +185,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Lmi16GfSYTg"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WWLjp4Xvhs4"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -201,7 +201,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/1Izp2YtJQIM"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dqQ-M28wcVc"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -217,7 +217,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pcVv56mF2nI"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/w47-SETFBvE"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -233,7 +233,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/xygRj8ovitU"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/CXYxsyi14UY"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
