--- a/index.html
+++ b/index.html
@@ -382,14 +382,8 @@
     <div class="container">
         
                 <div class="alt-foot">
-                          <h1>
-                         Her zamankinden daha hızlı ve etkili reels paylaşmak için doğru yerdesiniz .
-                    <span>
-                        <h1>
-                        Şablonları Instagram Reels ve Youtube sayfamızda inceleyebilirsiniz
-                    </h1>
-                    <h2>
-                        Kitlenizi büyütmek için profesyonel reels videolar oluşturmaya hazırız! Ya Siz ?
+                    <div class="head-text">
+                        Hareketli tasarımlar, sosyal medyada ürün ve kampanyalarınızı tanıtmak, web sitenize trafik çekmek için etkili bir yoldur.
                     </div>
                         <div class="cont">
                             <div class="cont1">
