--- a/indirim-kampanya.html
+++ b/indirim-kampanya.html
@@ -110,7 +110,7 @@
     </div>
 </div>
 <h2 style="text-align: center;"><a class="create" href="index.html">Ana sayfaya dön</a></h2>
-       <h1 style="text-align: center;">Kurumsal Tanıtım Şablonları</h1>
+       <h1 style="text-align: center;">İndirim ve Kampanya Şablonları</h1>
        
          
 
