--- a/urun-tanitim.html
+++ b/urun-tanitim.html
@@ -139,7 +139,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UhcCN1h0Qw8" title="" frameborder="0"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/udwuN4wb6Js" title="" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
             <div class="alt">
@@ -152,6 +152,87 @@
         <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
 
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
+        <div class="video-frame">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Z8YIylj45xg"
+                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <div class="alt">
+                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
+                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
+                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+
+        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
+
+        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
+
+        <div class="video-frame">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/zW0aCy-bius"
+                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <div class="alt">
+                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
+                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
+                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+
+        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
+        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
+
+        <div class="video-frame">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/GgfN9PHhi0g"
+                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <div class="alt">
+                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
+                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
+                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+
+        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
+        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
+
+        <div class="video-frame">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/w47-SETFBvE"
+                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <div class="alt">
+                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
+                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
+                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+
+        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
+        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
+
+        <div class="video-frame">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WWLjp4Xvhs4"
+                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <div class="alt">
+                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
+                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
+                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+
+        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
+        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
+
         <div class="video-frame">
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/YYqHlQGogdE"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
@@ -166,11 +247,10 @@
         </div>
 
         <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
-
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pClQSWsuj1U"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/9cJ5q_lfY8A"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -186,7 +266,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Lmi16GfSYTg"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/aht5pY5f2r0"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -202,7 +282,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/1Izp2YtJQIM"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/CXYxsyi14UY"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -218,87 +298,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pcVv56mF2nI"
-                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            <div class="alt">
-                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
-                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
-                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-        </div>
-
-        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
-        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
-
-        <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/xygRj8ovitU"
-                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            <div class="alt">
-                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
-                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
-                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-        </div>
-
-        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
-        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
-
-        <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QKw3QGPbvBM"
-                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            <div class="alt">
-                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
-                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
-                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-        </div>
-
-        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
-        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
-
-        <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/CfPHvpPO070"
-                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            <div class="alt">
-                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
-                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
-                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-        </div>
-
-        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
-        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
-
-        <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Y32T9C9ejdA"
-                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            <div class="alt">
-                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
-                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
-                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-        </div>
-
-        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
-        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
-
-        <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/IQ9Mz0jF79E"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/OOkawitEshM"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
