--- a/urun-tanitim.html
+++ b/urun-tanitim.html
@@ -122,7 +122,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/FaIkpv6ws6g"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/7R_V9GLYLv0"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -139,7 +139,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/udwuN4wb6Js" title="" frameborder="0"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/yRf5gvIf8E8" title="" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
             <div class="alt">
@@ -153,7 +153,7 @@
 
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Z8YIylj45xg"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/elpMF3udMpM"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -170,7 +170,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/zW0aCy-bius"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/YoVR2SkLcgg"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -186,7 +186,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/GgfN9PHhi0g"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/3IpZsjdM5pE"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -202,7 +202,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/w47-SETFBvE"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/nvdPIhHh32w"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -218,7 +218,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/WWLjp4Xvhs4"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/W_J7winyBCQ"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -234,7 +234,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/YYqHlQGogdE"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/j3iQuxe60oo"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -250,7 +250,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/9cJ5q_lfY8A"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hROAl2oxOYE"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -266,7 +266,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/aht5pY5f2r0"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UhcCN1h0Qw8"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -282,7 +282,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/CXYxsyi14UY"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/yWOhu7y1kFs"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -298,7 +298,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/OOkawitEshM"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/9IC4yAUk7xg"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
