--- a/indirim-kampanya.html
+++ b/indirim-kampanya.html
@@ -122,7 +122,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/w47-SETFBvE"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/OOkawitEshM"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -139,7 +139,8 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/opy7f7X_iQQ" title="" frameborder="0"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/eDmeh0pvbVc"
+                    title="" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
             <div class="alt">
@@ -152,6 +153,87 @@
         <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
 
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
+        <div class="video-frame">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/shorts/KFiFIX0Zhg4"
+                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <div class="alt">
+                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
+                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
+                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+
+        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
+
+        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
+
+        <div class="video-frame">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/7taQmJs5grM"
+                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <div class="alt">
+                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
+                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
+                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+
+        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
+        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
+
+        <div class="video-frame">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/qPJ8ST7b5cI"
+                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <div class="alt">
+                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
+                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
+                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+
+        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
+        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
+
+        <div class="video-frame">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/fc3clKrSbUw"
+                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <div class="alt">
+                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
+                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
+                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+
+        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
+        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
+
+        <div class="video-frame">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/w47-SETFBvE"
+                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <div class="alt">
+                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
+                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
+                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+
+        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
+        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
+
         <div class="video-frame">
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/j9MO_ME95EE"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
@@ -166,7 +248,6 @@
         </div>
 
         <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
-
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
@@ -219,86 +300,6 @@
 
         <div class="video-frame">
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/9cJ5q_lfY8A"
-                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            <div class="alt">
-                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
-                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
-                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-        </div>
-
-        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
-        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
-
-        <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/aht5pY5f2r0"
-                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            <div class="alt">
-                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
-                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
-                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-        </div>
-
-        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
-        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
-
-        <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/fc3clKrSbUw"
-                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            <div class="alt">
-                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
-                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
-                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-        </div>
-
-        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
-        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
-
-        <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/CXYxsyi14UY"
-                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            <div class="alt">
-                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
-                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
-                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-        </div>
-
-        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
-        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
-
-        <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/7taQmJs5grM"
-                title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            <div class="alt">
-                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
-                <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0"
-                    target="_blank" class="createss"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-        </div>
-
-        <!-- ---------------- VİDEO ALANI BİTİŞ-------------------- -->
-        <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
-
-        <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/aXR80gq4Zng"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
