--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
                             <div class="cont1">
                                 <div class="btn-text">Sosyal Medya Reels Şablonları</div>
                                 <div class="price">
-                                    Sadece<span>200TL yerine SADECE 150TL</span>'den<br>
-                                    başlayan fiyatlarla
+                                    Sadece<span>200TL yerine SADECE 150TL</span><br>
+                                   
                                 </div>
                                 <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
                                     <div class="alt-text">
