--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
         <div class="alt-footv2">
             <div style="color: crimson;" class="head-text">
-                Kendi markanıza özel tamamen özelleştirilebilir reels şablonlar!
+                Başlangıç Paketi
             </div>
             <div class="cont">
                 <div class="con">
