--- a/index.html
+++ b/index.html
@@ -386,7 +386,8 @@
         
                 <div class="alt-foot">
                     <div class="head-text">
-                        Hareketli tasarımlar, sosyal medyada ürün ve kampanyalarınızı tanıtmak, web sitenize trafik çekmek için etkili bir yoldur.
+                        Instagram Reels her gün milyonlarca izleyiciyle çılgınca popüler hale geldi
+
                     </div>
                         <div class="cont">
                             <div class="cont1">
