--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="btn-text">Sosyal Medya Reels Şablonları</div>
+                                <div class="btn-text">Paketlerimizi İnceleyin</div>
                                 <div class="price">
                                     Sadece<span>75TL</span>'den<br>
                                     başlayan fiyatlarla
