--- a/index.html
+++ b/index.html
@@ -385,8 +385,7 @@
   <div class="container">
         
                 <div class="alt-foot">
-                    <div class="head-text">
-                        Instagram Reels her gün milyonlarca izleyiciyle çılgınca popüler hale geldi
+                    <div class="btn-text">Hemen Başlamak için Paketlerimizi İnceleyin</div>
 
                     </div>
                         <div class="cont">
