--- a/index.html
+++ b/index.html
@@ -385,8 +385,8 @@
   <div class="container">
         
                 <div class="alt-foot">
-                    <div class="btn-text">Hemen Başlamak için Paketlerimizi İnceleyin</div>
-
+                    <div class="btn-text">
+                        Hareketli tasarımlar, sosyal medyada ürün ve kampanyalarınızı tanıtmak, web sitenize trafik çekmek için etkili bir yoldur.
                     </div>
                         <div class="cont">
                             <div class="cont1">
@@ -395,7 +395,7 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="btn-text">Paketlerimizi İnceleyin</div>
+                                <div class="btn-text">Sosyal Medya Reels Şablonları</div>
                                 <div class="price">
                                     Sadece<span>75TL</span>'den<br>
                                     başlayan fiyatlarla
