--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
         
                 <div class="alt-foot">
                     <div class="btn-text">
-                        Hareketli tasarımlar, sosyal medyada ürün ve kampanyalarınızı tanıtmak, web sitenize trafik çekmek için etkili bir yoldur.
+                        Reels videonuzu daha akılda kalıcı ve çekici hale getirmek için paketlerimizi inceleyin !
                     </div>
                         <div class="cont">
                             <div class="cont1">
@@ -395,15 +395,15 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="btn-text">Sosyal Medya Reels Şablonları</div>
+                                <div class="btn-text">Başlangıç Paketi</div>
                                 <div class="price">
-                                    Sadece<span>75TL</span>'den<br>
+                                    750 TL yerine <span>550 TL</span>'den<br>
                                     başlayan fiyatlarla
                                 </div>
                                 <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
                                     <div class="alt-text">
-                                        Bizimle iletişime geçebilirsiniz.<br>
-                                        <div class="alt-t">Tel 0534 781 51 05</div>
+                                        Banka havalesi ile ödemede %10 İndirim <br>
+                                        <div class="alt-t">Fatih Topçu Albaraka : TR 44 0020 3000 0344 7998 0000 01</div>
                                     </div>
                             </div>
                         </div>
