--- a/index.html
+++ b/index.html
@@ -403,7 +403,8 @@
                                 <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
                                     <div class="alt-text">
                                         Banka havalesi ile ödemede %10 İndirim <br>
-                                        <div class="alt-t">Fatih Topçu Albaraka : TR 44 0020 3000 0344 7998 0000 01</div>
+                                        <div class="alt-t">Albaraka/Fatih Topçu  : TR 44 0020 3000 0344 7998 0000 01</div>
+                                         <div class="alt-t">İletişim: 0534 781 51 05</div>
                                     </div>
                             </div>
                         </div>
