--- a/index.html
+++ b/index.html
@@ -404,7 +404,8 @@
                                     <div class="alt-text">
                                         Banka havalesi ile ödemede %10 İndirim <br>
                                         <div class="alt-t">Albaraka/Fatih Topçu  : TR 44 0020 3000 0344 7998 0000 01</div>
-                                         <div class="alt-t">İletişim: 0534 781 51 05</div>
+                                         <div class="buttons">
+                            <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0" target="_blank" class="create wh-bg">Whatsapp İletişim</a>
                                     </div>
                             </div>
                         </div>
