--- a/indirim-kampanya.html
+++ b/indirim-kampanya.html
@@ -122,7 +122,7 @@
         <!-- ---------------- VİDEO ALANI BAŞLANGIÇ -------------------- -->
 
         <div class="video-frame">
-            <iframe width="100%" height="100%" src="https://youtu.be/v5gxjmGmR9M"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/shorts/eDmeh0pvbVc"
                 title="72 reels.Profesyonel şablonları kullanarak işletmeniz için animasyonlu videolar paylaşın!"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
