--- a/etiket.html
+++ b/etiket.html
@@ -152,11 +152,11 @@
                         <div class="cont">
                             <div class="cont1">
                                 <div class="img-secr">
-                                    <img src="for.jpg" alt="as">
+                                    <img src="box2.png" alt="as">
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="btn-text">Başlangıç Paketi</div>
+                                <div class="btn-text">Girişimci Paketi</div>
                                 <div class="price">
                                     750 TL yerine <span>550 TL</span>'den<br>
                                     başlayan fiyatlarla
