--- a/etiket.html
+++ b/etiket.html
@@ -120,7 +120,7 @@
                         <div class="cont">
                             <div class="cont1">
                                 <div class="img-secr">
-                                    <img src="for.jpg" alt="as">
+                                    <img src="for.png" alt="as">
                                 </div>
                             </div>
                             <div class="cont1">
